--- a/index.html
+++ b/index.html
@@ -292,22 +292,9 @@ Contact: <a href="mailto:dkrutz@soarintelligentsolutions.com" target="_blank">dk
         </div>
     </div>
 
+    
     <script>
-        var tablinks = document.getElementsByClassName("tab-links");
-        var tabcontents = document.getElementsByClassName("tab-contents");
-        function opentab(tabname) {
-            for (tablink of tablinks) {
-                tablink.classList.remove("active-link")
-            }
-            for (tabcontent of tabcontents) {
-                tabcontent.classList.remove("active-tab")
-            }
-            event.currentTarget.classList.add("active-link")
-            document.getElementById(tabname).classList.add("active-tab");
-        }
-    </script>
-    <script>
-        var sidememu = document.getElementById("sidememu")
+        var sidememu = document.getElementById("sidememu");
         function openmemu() {
             sidememu.style.right = "0";
         }
