--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         <div class="mainMessageArea">Fusing Military, Aerospace Innovation, and AI/ML Excellence.</div>
         </div>
         <div class="image-box">
-            <img src="images/Blackhawk.jpeg" alt="SOAR Intelligent Solutions">
+            <img src="images/Blackhawk.jpeg" alt="SOAR Intelligent Solutions" width="5000" height="5000">
         </div>
     </div>
 
