--- a/index.html
+++ b/index.html
@@ -194,7 +194,12 @@ Contact: <a href="mailto:cdurkin@soarintelligentsolutions.com" target="_blank">c
 
 <img src="images/ag.jpeg" alt="Agamemnon Crassidis" width="300" height="300">
 
-<p>Dr. Crassidis is a Professor at the Rochester Institute of Technology (RIT), Department of Mechanical Engineering. He has more than 20 years of industrial experience in the areas control, and measurements systems.</p>
+<p>Dr. Crassidis is a Professor at the Rochester Institute of Technology (RIT), Department of Mechanical Engineering. He has more than 20 years of industrial experience in the areas control, and measurements systems. Dr. Crassidis received a B.S., M.S., and Ph.D. in Mechanical Engineering from The University at Buffalo where he specialized in the areas of systems engineering, mechanical system design, robotic systems, and nonlinear control methods. Currently, Dr. Crassidis is a Professor of Mechanical Engineering at the Rochester Institute of Technology. Dr. Crassidis has worked for Calspan Corporation as a senior Aeronautical Engineer and Lead Systems Engineer for an experimental flight research NF-16 aircraft (the VISTA, currently the X62A aircraft) used primarily as an in-flight simulator and Veridian Transportation Division as a part-time consulting engineer to analyze components of the Automated Highway System. </p>
+
+
+<p>Dr. Crassidis developed the control laws for the VISTA and many other research aircraft programs. He has more than 30 years of industrial experience in the areas of aerospace flight control system design; aircraft parameter identification; mathematical modeling and identification of nonlinear systems using experimental responses; systems engineering; mechanical systems design; and navigation, control, and measurements systems. He is an active member of the American Institute of Aeronautics and Astronautics serving as a past Technical Committee Chair for the Atmospheric Flight Mechanics section. He also has more than 20 years of teaching experience as a part-time and full-time faculty member teaching graduate courses in systems modeling, flight dynamics, orbital mechanics, linear and nonlinear control systems. Currently, Dr. Crassidis is developing advanced artificial intelligent control methods that are solely based on systems measurements and require no theoretical models for control tuning or development. The new control strategy was successfully applied to the control of an Learjet aircraft as part of an Air Force Test Pilot School Test Management Project. He also is developing advanced measurement systems for use in vehicle orientation sensing to a high degree of accuracy that is valid is all dynamical conditions. Dr. Crassidis is also researching methods for estimating gross weight and center-of-gravity locations of vehicles solely using traditionally available measurements requiring no knowledge of the vehicle systems dynamics. In addition, Dr. Crassidis performed a year-long sabbatical at Impact Technologies (SBIR Tibbetts Award winner) supported by external grant funds for the development of an orientation estimation device and highly accurate inertial navigation system and was also the PI/co-PI on over 15 SBIR/STTR Phase I and II awards.
+</p>
+
 
 
 
@@ -272,9 +277,39 @@ Contact: <a href="mailto:dkrutz@soarintelligentsolutions.com" target="_blank">dk
                 <div class="about-col-2">
                     <h1 class="sub-title">Contact</h1>
 
+
+<!--
+    - Create a table or something else
+    - AI/ML related inquires
+    -- Aerospace
+    -- Hiring
+
                         <p>
                         <a href="mailto:cdurkin@soarintelligentsolutions.com" target="_blank">cdurkin@soarintelligentsolutions.com</a>
                         </p>
+
+-->
+
+
+
+
+
+
+<ul>
+    <li>General Inquiries: <a href="mailto:General@soarintelligentsolutions.com" target="_blank">General@soarintelligentsolutions.com</a></li>
+    <li>Media Inquiries: <a href="mailto:Media@soarintelligentsolutions.com" target="_blank">Media@soarintelligentsolutions.com</a></li>
+    <li>Consulting Inquiries: <a href="mailto:Consulting@soarintelligentsolutions.com" target="_blank">Consulting@soarintelligentsolutions.com</a></li>
+
+    <li>Work Opportunities</li>
+<ul>
+
+    <li>Software Engineer: <a href="mailto:SEOps@soarintelligentsolutions.com" target="_blank">SEOps@soarintelligentsolutions.com</a></li>
+    <li>Artificial Intelligence Expert: <a href="mailto:AIOps@soarintelligentsolutions.com" target="_blank">AIOps@soarintelligentsolutions.com</a></li>
+    <li>Aerospace Engineer: <a href="mailto:AEOps@soarintelligentsolutions.com" target="_blank">AEOps@soarintelligentsolutions.com</a></li>
+</ul>
+</ul>
+
+
                     </div>
                 </div>
             </div>
