--- a/index.html
+++ b/index.html
@@ -65,8 +65,59 @@
 
   <style>
 
+  table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-bottom: 20px;
+    }
+
+    th, td {
+      padding: 12px;
+      text-align: left;
+      border-bottom: 1px solid #ddd;
+    }
+
+    th {
+      background-color: #f2f2f2;
+    }
+
+    a {
+      color: #007bff;
+      text-decoration: none;
+      font-weight: bold;
+    }
 
   
+ .containerServices {
+            max-width: 400px;
+            margin: 20px 0px;
+            background-color: #fff;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
+
+        .containerServices h1 {
+            text-align: center;
+            color: #333;
+        }
+
+        .containerServices ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+        }
+
+        .containerServices li {
+            padding: 10px;
+            margin: 5px 0;
+            background-color: #f0f0f0;
+            border-radius: 4px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+        }
+
+
+
   </style>
 
 
@@ -76,8 +127,8 @@
      <div id="header">
         <div class="container">
             <nav>
-              <!--  <a href="index.html"><img src="images/SoarBlack2.png" class="logo" alt="Soar Intelligent Solutions"></a>-->
-  <img src="images/SoarBlack2.png" class="logo">
+              <a href="index.html"><img src="images/SoarBlack2.png" class="logo" alt="Soar Intelligent Solutions"></a>
+<!--  <img src="images/SoarBlack2.png" class="logo">-->
 
 
                 <ul id="sidememu">
@@ -240,23 +291,24 @@ Contact: <a href="mailto:dkrutz@soarintelligentsolutions.com" target="_blank">dk
                     <h1 class="sub-title">Services</h1>
 
 
-                    <p>Through our team and partnerships, SOAR offers a variety of services, including:
+     <p>Through our team and partnerships, SOAR offers a variety of services, including:</p>                   
 
-<ul>
-<li>Consulting</li>
-  <ul>
-      <li>Artificial Intelligence</li>
-      <li>Machine Learning</li>
-      <li>Aerospace</li> 
-      <li>Cybersecurity</li>
-      <li> Software Development</li>
-      <li>Military Operational knowledge</li>
-  </ul>
-<li>Emergency Preparedness Management</li>
-<li>Software Development</li>
-</ul>
+<div class="containerServices">
 
-</p>
+        <ul>
+            <li>Artificial Intelligence</li>
+            <li>Machine Learning</li>
+            <li>Aerospace Engineering</li>
+            <li>Cybersecurity</li>
+            <li>Software Development</li>
+            <li>Military Operational Knowledge</li>
+            <li>Emergency Preparedness Management</li>
+        </ul>
+    </div>
+
+<p>Utilizing its research, operational and implementation capabilities and experiences, SOAR can provide consulting and development services in these areas.</p>
+
+
 
                     </div>
                 </div>
@@ -292,22 +344,47 @@ Contact: <a href="mailto:dkrutz@soarintelligentsolutions.com" target="_blank">dk
 
 
 
+ <table>
+    <tr>
+      <th>Contact Type</th>
+      <th>Email</th>
+    </tr>
+    <tr>
+      <td>General Inquiries</td>
+      <td><a href="mailto:General@soarintelligentsolutions.com" target="_blank">General@soarintelligentsolutions.com</a></td>
+    </tr>
+    <tr>
+      <td>Media Inquiries</td>
+      <td><a href="mailto:Media@soarintelligentsolutions.com" target="_blank">Media@soarintelligentsolutions.com</a></td>
+    </tr>
+    <tr>
+      <td>Consulting Inquiries</td>
+      <td><a href="mailto:Consulting@soarintelligentsolutions.com" target="_blank">Consulting@soarintelligentsolutions.com</a></td>
+    </tr>
+  </table>
 
+  <h3>Work Opportunities</h3>
 
+  <table>
+    <tr>
+      <th>Position</th>
+      <th>Email</th>
+    </tr>
+    <tr>
+      <td>Software Engineer</td>
+      <td><a href="mailto:SEOps@soarintelligentsolutions.com" target="_blank">SEOps@soarintelligentsolutions.com</a></td>
+    </tr>
+    <tr>
+      <td>Artificial Intelligence Expert - Consulting</td>
+      <td><a href="mailto:AIOps@soarintelligentsolutions.com" target="_blank">AIOps@soarintelligentsolutions.com</a></td>
+    </tr>
+    <tr>
+      <td>Aerospace Engineer - Consulting</td>
+      <td><a href="mailto:AEOps@soarintelligentsolutions.com" target="_blank">AEOps@soarintelligentsolutions.com</a></td>
+    </tr>
+  </table>
 
-<ul>
-    <li>General Inquiries: <a href="mailto:General@soarintelligentsolutions.com" target="_blank">General@soarintelligentsolutions.com</a></li>
-    <li>Media Inquiries: <a href="mailto:Media@soarintelligentsolutions.com" target="_blank">Media@soarintelligentsolutions.com</a></li>
-    <li>Consulting Inquiries: <a href="mailto:Consulting@soarintelligentsolutions.com" target="_blank">Consulting@soarintelligentsolutions.com</a></li>
-
-    <li>Work Opportunities</li>
-<ul>
-
-    <li>Software Engineer: <a href="mailto:SEOps@soarintelligentsolutions.com" target="_blank">SEOps@soarintelligentsolutions.com</a></li>
-    <li>Artificial Intelligence Expert: <a href="mailto:AIOps@soarintelligentsolutions.com" target="_blank">AIOps@soarintelligentsolutions.com</a></li>
-    <li>Aerospace Engineer: <a href="mailto:AEOps@soarintelligentsolutions.com" target="_blank">AEOps@soarintelligentsolutions.com</a></li>
-</ul>
-</ul>
+<p>Note: When contacting about work opportunities, please provide a brief cover letter and update CV.</p>
 
 
                     </div>
