--- a/index.html
+++ b/index.html
@@ -384,7 +384,7 @@ Contact: <a href="mailto:dkrutz@soarintelligentsolutions.com" target="_blank">dk
     </tr>
   </table>
 
-<p>Note: When contacting about work opportunities, please provide a brief cover letter and update CV.</p>
+<p>Note: When contacting about work opportunities, please provide a brief cover letter and updated CV.</p>
 
 
                     </div>
