--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@ Contact: <a href="mailto:acrassidis@soarintelligentsolutions.com;" target="_blan
 
 <img src="images/dan.png" alt="Daniel Krutz" width="200" height="300">
 
-<p>Dr. Daniel Krutz is an Associate Professor at Rochester Institute of Technology, Department of Software Engineering and Center for Cybersecurity. Krutz is the Director of the Autonomy, WARfare, and Engineering (AWARE) Lab, which supports several externally funded projects for the NSF, NSA and the DOD. Krutz is the recipient of the NSF CAREER Award (2022). Krutz received a research faculty fellowship at the US Air Force Research Laboratory (AFRL). Krutz has advised high level DOD programs in the areas of AI and strategic reasoning. He is the author of numerous AI/ML-focused publications, many of which have appeared in top tier venues. Dr. Krutz has achieved over $6M in federally funded projects since 2018 from sources such as the AFRL, ONR, NSF and NSA.</p>
+<p>Dr. Daniel Krutz is an Associate Professor at Rochester Institute of Technology, Department of Software Engineering and Global Cybersecurity Institute. Krutz is the Director of the Autonomy, WARfare, and Engineering (AWARE) Lab, which supports several externally funded projects for the NSF, NSA and the DOD. Krutz is the recipient of the NSF CAREER Award (2022). Krutz received a research faculty fellowship at the US Air Force Research Laboratory (AFRL). Krutz has advised high level DOD programs in the areas of AI and strategic reasoning. He is the author of numerous AI/ML-focused publications, many of which have appeared in top tier venues. Dr. Krutz has achieved over $6M in federally funded projects since 2018 from sources such as the AFRL, ONR, NSF and NSA.</p>
 
 
 
