--- a/index.html
+++ b/index.html
@@ -76,8 +76,16 @@
      <div id="header">
         <div class="container">
             <nav>
-              <a href="index.html"><img src="images/SoarBlack2.png" class="logo" alt="Soar Intelligent Solutions"></a>
-<!--  <img src="images/SoarBlack2.png" class="logo">-->
+
+                <img src="images/SoarBlack3.png" class="logo" alt="Soar Intelligent Solutions" style="width: 8%;">
+            <!--
+              <a href="index.html"><img src="images/SoarBlack3.png" class="logo" alt="Soar Intelligent Solutions"></a>
+
+          
+
+            <a href="index.html"><img src="images/SoarBlack3.png" class="logo" alt="Soar Intelligent Solutions" style="width: 20%;" /></a>
+
+ <img src="images/SoarBlack2.png" class="logo">-->
 
 
                 <ul id="sidememu">
