--- a/index.html
+++ b/index.html
@@ -77,7 +77,10 @@
         <div class="container">
             <nav>
 
-                <img src="images/SoarBlack5.png" class="logo" alt="Soar Intelligent Solutions" style="width: 8%;">
+<a href="index.html"><img src="images/SoarBlack5.png" class="logo" alt="Soar Intelligent Solutions" style="width: 100px; padding-right: 35px;"></a>
+
+
+             <!--   <a href="index.html"><img src="images/SoarBlack5.png" class="logo" alt="Soar Intelligent Solutions" style="width: 100px;"></a>-->
             <!--
               <a href="index.html"><img src="images/SoarBlack3.png" class="logo" alt="Soar Intelligent Solutions"></a>
 
