--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@ Contact: <a href="mailto:cdurkin@soarintelligentsolutions.com" target="_blank">c
 <p></p>
 
 
-<h2>Agamemnon Crassidis, PhD: Vice President</h2>
+<h2>Agamemnon Crassidis, PhD: Advisor</h2>
 
 <img src="images/ag.jpeg" alt="Agamemnon Crassidis" width="300" height="300">
 
@@ -220,7 +220,9 @@ Contact: <a href="mailto:acrassidis@soarintelligentsolutions.com;" target="_blan
 <p></p>
 
 
-<h2>Daniel Krutz, PhD: Vice President, Chief Technology Officer</h2>
+<!--<h2>Daniel Krutz, PhD: Vice President, Chief Technology Officer</h2>-->
+<h2>Daniel Krutz, PhD: Advisor</h2>
+                  
 
 <img src="images/dan.png" alt="Daniel Krutz" width="200" height="300">
 
