--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         <div class="mainMessageArea">Fusing Military, Aerospace Innovation, and AI/ML Excellence.</div>
         </div>
         <div class="image-box">
-            <img src="images/Blackhawk.jpeg" alt="SOAR Intelligent Solutions" width="5000" height="5000">
+            <img src="images/VISTAartsinf1.jpg" alt="SOAR Intelligent Solutions" width="5000" height="5000">
         </div>
     </div>
 
@@ -148,11 +148,6 @@
 
 <p>SOAR Intelligent Solutions, LLC (SOAR) collectively brings together decades of experience in military operational knowledge, aerospace engineering, machine learning/artificial intelligence and software engineering. The project team has a demonstrated record of accomplishment in successfully completing dozens of federal and civilian projects. </p>
 
-<p>
-"SOAR" is a homage to CEO  Mr. Chris Durkin's CW4 (Ret) experience serving as a Blackhawk pilot for the elite <a href="https://www.soc.mil/USASOAC/160th.html" target="_blank">160th Special Operations Aviation Regiment</a> or 'SOAR' (Night Stalkers).</p>
-
-
-
                     </div>
                 </div>
             </div>
@@ -173,28 +168,16 @@
                     <h1 class="sub-title">Leadership Team</h1>
 
 
-<h2>Chris Durkin: President, CEO</h2>
+<h2>Alan Provda: President, CEO</h2><br />
 
 
-<img src="images/Chris.png" alt="Chris Durkin" width="200" height="300">
+<img src="images/alan.jpg" alt="Alan Provda" width="260" height="260">
 
 
-<p>Mr. Durkin is a master army aviator and retired 23 year veteran of both the US Marine Corps and US Army Special Operations Command (SOCOM).</p>
+<p>Mr. Provda possesses several decades of experience in aviation and related industries, with a strong focus on the adaptive reuse of technologies. Throughout his career, he has held executive leadership and consulting roles across EMEA, North and South America, and ASEAN countries. His expertise centers on the adaptive reuse of both certified and experimental aircraft, along with the acquisition of related intellectual property for non-commercial applications. These applications include innovative approaches to surveillance, fire-fighting, interdiction, and cargo transportation. Additionally, Mr. Provda has significant experience in implementing CRM, ERP, and revenue probabilistic modeling technologies. He has also been involved in the purchase and sale of airport facilities, aircraft, and aircraft components, as well as in the leadership of airlines and aviation-related organizations.</p>
 
 
-<p>Mr. Durkin served as the Washington, D.C. Strategic National Stockpile (SNS) Coordinator where he was responsible for developing a strategy to dispense emergency medication to the District of Columbia's more than one million residents and guests within 48 hours should a bioterrorism event occur involving anthrax or other lethal agents.</p>
-  
-<p>In the private sector, Mr. Durkin was a senior emergency management consultant specializing in traditional and public health emergency and disaster prevention, mitigation, preparedness, response and recovery. While working closely with a wide array of clients, he conducted hazard vulnerability assessments (HVA), culture and climate surveys, Clery reviews, emergency plan review, emergency plan development risk assessments and developed Comprehensive Emergency Management Programs (CEMP). He also validated policies, plans and procedures using HSEEP compliant discussion and operations-based exercises.</p
-
-<p>Mr. Durkin has served as the SNS Coordinator and Public Health Emergency Operations and Plans Officer for the Monroe County Department of Health in New York. He supervised a staff of preparedness specialists and provided leadership during the development of the Civil Preparedness Initiative (CPI), which teamed the Department of Health with all municipalities in Monroe County, including the City of Rochester. During this period, he oversaw numerous tabletop, functional and full-scale exercises. Additionally, Mr. Durkin was co-chair of the Community of Monroe Citizen Corps Council, he developed the Monroe County Community Emergency Response Team (CERT) Program, and he created the Department of Public Health's Medical Reserve Corps. </p>
- 
-
-<p>Mr. Durkin served as a U.S. Marine for five years, and later served in the U.S. Army for 18 years as an MH-60 Blackhawk pilot in the 1st Special Forces Group (SFG) Flight Detachment, and the elite 160th Special Operations Aviation Regiment, an element of the Army's Special Operations Command (SOCOM). During his military career, Durkin's duties included Flight Lead, Marine Corps Aviation Weapons and Tactics Instructor (WTI), Senior Operations and Plans Officer, Instructor Pilot, Platoon Leader, Electronic Warfare Officer and Air/Ground Safety Officer, attaining the rank of CW4. He coordinated multi-service and multinational operations and training exercises worldwide. </p>
- 
-<p>Before relocating to the Rochester area, he was a contractor and site director responsible for Information Technology (IT) Operations in support of U.S. Navy SEALs at Naval Amphibious Base Little Creek in Virginia. He is a decorated combat veteran, having been awarded the Legion of Merit, Bronze Star, Air Medal, Meritorious Service Medal and Master Army Aviator Badge.</p>
-
-
-Contact: <a href="mailto:cdurkin@soarintelligentsolutions.com" target="_blank">cdurkin@soarintelligentsolutions.com</a>
+Contact: <a href="mailto:alan@soarintelligentsolutions.com" target="_blank">alan@soarintelligentsolutions.com</a>
 
 
 <p></p>
@@ -291,21 +274,6 @@ Contact: <a href="mailto:dkrutz@soarintelligentsolutions.com" target="_blank">dk
                 <div class="about-col-2">
                     <h1 class="sub-title">Contact</h1>
 
-
-<!--
-    - Create a table or something else
-    - AI/ML related inquires
-    -- Aerospace
-    -- Hiring
-
-                        <p>
-                        <a href="mailto:cdurkin@soarintelligentsolutions.com" target="_blank">cdurkin@soarintelligentsolutions.com</a>
-                        </p>
-
--->
-
-
-
  <table>
     <tr>
       <th>Contact Type</th>
@@ -361,8 +329,8 @@ Contact: <a href="mailto:dkrutz@soarintelligentsolutions.com" target="_blank">dk
 
 
         <div class="copyright">
-            <p>Copyright © 2024 SOAR Intelligent Solutions, LLC.</p>
-            <p>Veteran Owned and Operated</p>
+            <p>Copyright © 2025 SOAR Intelligent Solutions, LLC.</p>
+            <!--<p>Veteran Owned and Operated</p>-->
         </div>
     </div>
 
